# libosdp-conformance

./: .gitignore  CMakeLists.txt  Makefile  README.md  poke  test.sh
aes/: aes.c  aes.h
command/: buffer_poll.json  buzz.json  led-_perm_on_color=1.json  led-_perm_on_color=2.json  output_status.json  text.json
include/: open-osdp.h  osdp-local-config.h  osdp-tls.h  osdp_conformance.h
src-485/: Makefile  open-osdp.c  osdp-local-config.h
src-cli/: sign.cpp
src-lib/: oo_cmdbreech.c  oo_initialize.c  oo_process.c  oo_util.c  oo_util2.c  oosdp_actions.c  oosdp_conformance.c  oosdp_crc.c  oosdp_files.c  oosdp_logmsg.c  oosdp_secure.c  oosdp_ui.c  osdp-api.c
src-tls/: initiator.c  osdp-api.c  osdp-local-config.h  osdp-net-client.c  osdp-net-server.c  osdp-tcp-client.c  osdp-tcp-server.c
src-ui/: open-osdp-CP-status.c  open-osdp-PD-status.c  open-osdp-kick.c  send-osdp-command.c
test/diags/: diag01.c
